Updated documentation. Added a Callback Example.